--- a/text/DP_pasovska.tex
+++ b/text/DP_pasovska.tex
@@ -66,6 +66,8 @@ V rámci diplomové práce byl proveden také sběr historických fotografií. P
 
 Diplomová práce je rozdělena na čtyři hlavní části. Začátek práce poskytuje seznámení s řekou Otavou z hydrologického, historického i kulturního hlediska. Ve druhé části jsou blíže popsána použitá data. Následně je konkrétně popsán způsob zpracování dat a metody, které byly v rámci diplomové práce použity. Závěr je věnován prezentování výsledků na webové stránce, která byla vytvořena v jazyce (NO PROSTĚ TADY SE ROZEPSAT AŽ SE ROZMYSLÍM JAK TU STRÁNKU NAPSAT)
 
+napsat něco o tom, že je práce v Latexu a že podporuju rozvoj v sázecím prostředí, že jsem si sama vyhledávala data atd
+
 
 \end{introduction}
 
@@ -317,7 +319,7 @@ Pro tvorbu 3D modelu Strakonického hradu byly použity stavební plány, které
 
 Stavební úřad měl k dispozici vypracované podklady získané Stavebně historickým průzkumem (SHP). SHP je metoda, která kompletně vypracuje a~zhodnotí historicky významnou stavební památku či historické jádro některých českých a moravských měst. Mezi prvními, kdo SHP prováděl, byl Kamil Hilbert na počátku 20. století. Následoval ho Oldřich Stefan z Ústavu dějin architektury ČVUT a doc. Václav Mencl z Filozofické fakulty Univerzity Karlovy. Po 2. světové válce bylo zdevastováno mnoho měst a významných památek. Z tohoto důvodu vznikl ústav R-ateliér, který rekonstruoval památky při organizaci Stavoprojekt. V roce 1954 byl R-ateliér přejmenován na Státní ústav pro rekonstrukce památkových měst a objektů (SÚRPMO). V SÚRPMO působilo několik významných osobností, za zmínku jistě stojí Dobroslav Líbal nebo Jan Muk. 
 
-Mezi materiály, které měl k dispozici Stavební úřad ve Strakonicích, patří i vypracované podklady z SHP. Tyto materiály pochází ze 70. let 20. století a jsou v perfektním stavu a velmi detailně vypracovány. Na každém listu je ručně zakreslený erb Strakonic. Autor odvedl precizní a velmi kvalitní práci. Tyto materiály mají však v dnešní době vysokou hodnotu, tudíž nebylo možné je za účelem tvorby 3D modelu zapůjčit. Z tohoto důvodu byly použity plány vzniklé na počátku 21. století. \cite{shp}
+Mezi materiály, které měl k dispozici Stavební úřad ve Strakonicích, patří i vypracované podklady z SHP. Tyto materiály pochází ze 70. let 20. století, jsou v perfektním stavu a velmi detailně vypracovány. Na každém listu je ručně zakreslený erb Strakonic. Autor odvedl precizní a velmi kvalitní práci. Tyto materiály mají však v dnešní době vysokou hodnotu, tudíž nebylo možné je za účelem tvorby 3D modelu zapůjčit. Z tohoto důvodu byly použity plány vzniklé na počátku 21. století. \cite{shp}
 
 \clearpage
 
@@ -335,7 +337,7 @@ Císařské povinné otisky stabilního katastru vznikaly na základě císařsk
 
 Kartografické zobrazení těchto map bylo Cassini-Soldnerovo (transverzální válcové zobrazení). Kladná osa Y směřovala k západu a kladná osa X k~jihu. Jednalo se o zobrazení ekvidistantní v kartografických polednících, což znamená, že se vzdáleností od základního poledníku roste i veikost délkového zkreslení. Z tohoto důvodu bylo potřeba vytvořit několik soustav, pro Rakousko–Uhersko jich bylo použito 7. Při volbě soustav se vycházelo z požadavku na maximální zkreslení 50 cm/km. 
 
-Na území Česka (nebo Československa??) byly použity tři soustavy. Jednalo se o soustavy s počátečním bodem Gusterberg (Horní Rakousy), sv. Štěpán (Vídeň) a Gellérthégy (Budapešť). V roce 1887 byla vydána nová měřická dokumentace, která již používala metrickou soustavu. Císařské povinné otisky byly původně uloženy v Centrálním archivu pozemkového katastru ve Vídni, po rozpadu Rakousko-Uherska byly převezeny do Prahy. Legendu těchto map můžete vidět na obrázku č. \ref{obrazek:legenda}. \cite{mapko}
+Na našem území byly použity tři soustavy. Jednalo se o soustavy s počátečním bodem Gusterberg (Horní Rakousy), sv. Štěpán (Vídeň) a Gellérthégy (Budapešť). V roce 1887 byla vydána nová měřická dokumentace, která již používala metrickou soustavu. Císařské povinné otisky byly původně uloženy v Centrálním archivu pozemkového katastru ve Vídni, po rozpadu Rakousko-Uherska byly převezeny do Prahy. Legendu těchto map můžete vidět na obrázku č. \ref{obrazek:legenda}. \cite{mapko}
 
 
 \begin{figure}[h]
@@ -354,23 +356,48 @@ Katastrální mapa je státní mapové dílo vydávané Českým úřadem zeměm
 
 
 \section{Fotodokumentace}
-Součástí této práce je také vyhledání historických fotografií a jejich případné porovnání se současným stavem. Z historických fotografií byly použity fotografie ze sbírky Ladislava Hölla. Dále byly vyhledány fotografie na webových stránkách a 
+Součástí této práce je také vyhledání historických fotografií a jejich případné porovnání se současným stavem. Z historických fotografií byly použity fotografie ze sbírky Ladislava Hölla a z webových stránek Fotohistorie \cite{fotohistorie} a Šumava \cite{sumava}. Dále byly prozkoumány archivní publikace, ze kterých byly použité fotografie oskanovány pro následné použití v této práci.
+
+\section{Data pro tvorbu dílčích tematických map}
+
 
 \chapter{Příprava dat}
 
-\section{Georeferencování}
-
-
-\subsection{Transformace}
-Co je transformace (versus projekce), využití atd)
-
-\subsubsection{Obecná transformace}
-
-\subsubsection{Transformace založené na vyrovnání MNČ}
-
-
-\chapter{Zpracování dat}
 \section{Tvorba 3D modelu Strakonického hradu}
+Tvorba 3D modelu Strakonického hradu probíhala v programu SketchUp, který vyvinula americká společnost Last Software. Velkou výhodou tohoto programu je to, že umožňuje vytvořený objekt propojit s libovolným softwarem GIS a umístit jej v prostoru. 
+
+Software SketchUp byl poprvé představen na trhu v roce 2000, kdy sklidil velké úspěchy a zájem významných firem. V tomto roce také vyhrál ocenění \textit{Best New Products or Services}. V roce 2006 je program koupen společností Google, která jej rozšiřuje a vylepšuje některé funkce. V roce 2012 je SketchUp koupen společností Trimble, která s Googlem stále spolupracuje a společně se podílí na rozvoji služby SketchUp 3D Warehouse, která v sobě obsahuje několik existujících komponent z celého světa. Tato skutečnost umožňuje při vytváření 3D modelů používat již existující textury a objekty (stromy, dopravní značky~aj.).
+
+Při tvorbě 3D modelu se vycházelo z půdorysu. Jednotlivé části hradu byly vytvářeny základními funkcemi programu SketchUp. Z toho důvodu, že se jedná o rozsáhlou stavbu, byl objekt generalizován. 
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=13cm]{pics/pudorys_hrad.jpg}
+	\caption{Půdorys Strakonického hradu}
+	\label{obrazek:pudorys}
+\end{figure}
+
+
+\cite{sketchup1} \cite{sketchup2}
+
+\section{Transformace}
+Císařské povinné otisky stabilního katastru a Státní mapa odvozená byly zapůjčeny od Českého úradu zeměměřického a katastrálního ve formátu JPG ve formě rastrových dat. Tato data bylo nutné zgeoreferencovat \footnote{Proces umístění rastru do známého souřadnicového systému}. Pro georeferencování byl použit program ArcGIS od společnosti ESRI. Zvolený souřadnicový systém byl S-JTSK Krovak East North (EPSG: 5514). 
+
+Pro georeferencování posloužily jako podkladová datakatastrální mapy, jež jsou k dispozici online prostřednictvím WMS služby poskytnuté ze serveru ČÚZK.  Jako vlícovací body byly u prvního rastru voleny přednostně takové body, u kterých se předpokládá určitá stabilita (půdorysy kostelů, hradu). U dalších rastrů byly vlícovací body voleny s ohledem na klad mapových listů a plynulou návaznost se sousedními rastry. Vzhledem k měřítku mapových podkladů byl požadavek na maximální hodnotu směrodatné odchylky 2,5 m. 
+
+Níže jsou popsány jednotlivé typy transformací, z nichž bylo velké množství použito při zpracování získaných dat. 
+
+
+
+\section{Tvorba mozaiky}
+Zpracovaná data bylo potřeba vhodně uložit a zobrazit jako celek. Za tímto účelem byla v prostředí ArcMap vytvořena geodatabáze s názvem \textit{Otava.gdb}. V této geodatabázi byl vytvořen nový objekt - mozaika. Zgeoreferencované listy byly následně do mozaiky nahrávány funkcí \textit{Add Raster To Mosaic Dataset}.
+
+Vzhledem k tomu, že každý z použitých mapových podkladů obsahoval mimorámové údaje, bylo nutné rastry oříznout. Za tímto účelem byla v rámci geodatabáze vytvořena polygonová vrstva. V této vrstvě byl pro každý mapový podklad vytvořet maskovací polygon, který přesně ohraničuje oblast z každého listu. Polygon byl pojmenován podle rastru, který ohraničuje, toto označení je dále využito jako propojovací klíč. 
+
+Pro přiřazení ořezového polygonu k danému rastru byla v rámci mozaiky použita funkce \textit{Modify/Import Footprints or Boundary}, v níž byla definována polygonová vrstva a propojovací klíč. Výsledné ořezané listy lze vidět na obrázku č. xx. 
+
+
+
 
 
 
@@ -398,8 +425,20 @@ Závěr
 % seřadit podle abecedy
 % \printglossaries
 \begin{description}
+	\item[ČMeS] Česká meteorologická společnost
+	\item[ČVUT] České Vysoké Učení Technické
+	\item[ČÚZK] Český ústav zeměměřický a katastrální
 	\item[DIBAVOD] Digitální báze vodohospodářských dat
-	\item[SHP] S
+	\item[EPSG] European Petroleum Survey Group – databáze obsahující kódy zemských elipsoidů, geodetických dat, zeměpisných a kartografických souřadnicových systémů, měrných jednotek apod., každý souřadnicový systém má unikátní kód
+	\item[ESRI] Environmental Systems Research Institute - jeden z největších světových producentů software GIS
+	\item[GIS] Geografický informační systém
+	\item[JPG] Joint Photographic Experts Group
+	\item[SHP] Shapefile
+	\item[SHP] Stavebně historický průzkum
+	\item[SÚRPMO] Státní ústav pro rekonstrukce památkových měst a objektů
+	\item[S-JTSK] Systém jednotné trigonometrické sítě katastrální
+	\item[VŠCHT] Vysoká škola chemicko-technologická v Praze
+	\item[WMS] Web Map Service
 
 \end{description}
 
