--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -180,7 +180,7 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
   url = "https://edu.techmania.cz/cs/veda-v-pozadi/958",
   howpublished = "[online]",
   title = "Věda a technika v pozadí: Rýžování zlata",
-  note = "[cit. 1. 4.2019]",
+  note = "[cit. 1.4.2019]",
 }
 
 @book{obce,
@@ -195,27 +195,58 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
   url = "http://www.svornik.cz/?page_id=1407",
   howpublished = "[online]",
   title = "SHP v České republice",
-  note = "[cit. 5. 4.2019]",
+  note = "[cit. 5.4.2019]",
 }
 
 @misc{cuzk,
   url = "https://www.cuzk.cz/Uvod.aspx",
   howpublished = "[online]",
   title = "Český úřad zeměměřický a katastrální",
-  note = "[cit. 10. 4.2019]",
+  note = "[cit. 10.4.2019]",
 }
 
 @misc{mapko,
   title = "Mapování",
   url = "http://pepa.fsv.cvut.cz/~mapovani/web/index.html",
   howpublished = "[online]",
-  note = "[cit. 10. 4.2019]",
+  note = "[cit. 10.4.2019]",
 }
 
 @misc{meteo,
   title = "Elektronický meteorologický slovník",
   url = "http://slovnik.cmes.cz/hesla",
   howpublished = "[online]",
-  note = "[cit. 11. 4.2019]",
+  note = "[cit. 11.4.2019]",
 }
 
+
+@misc{fotohistorie,
+  title = "Fotohistorie",
+  url = "http://www.fotohistorie.cz/Default.aspx",
+  howpublished = "[online]",
+  note = "[cit. 15.4.2019]",
+}
+
+@misc{sumava,
+  title = "Šumava",
+  url = "http://www.sumava.cz/",
+  howpublished = "[online]",
+  note = "[cit. 15.4.2019]",
+}
+
+@misc{sketchup1,
+  author = "Bethany",
+  title = "Everything You Need To Know About Sketchup",
+  url = "https://www.scan2cad.com/cad/everything-about-sketchup/",
+  howpublished = "[online]",
+  note = "[cit. 17.4.2019]",
+  month = "March 12,",
+  year = "2018",
+}
+
+@misc{sketchup2,
+  title = "online SketchUp: Web o SketchUpu - rady a tipy",
+  url = "https://onlinesketchup.cz/blog/google-prodal-sketchup-spolecnosti-trimble/",
+  howpublished = "[online]",
+  note = "[cit. 17.4.2019]",
+}
