--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -205,6 +205,14 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
   note = "[cit. 10.4.2019]",
 }
 
+@misc{smo5,
+  url = "http://oldgeogr.muni.cz/ucebnice/kartografie/obsah.php?show=17",
+  howpublished = "[online]",
+  title = "Kartografie a geoinformatika: Multimediální učebnice",
+  note = "[cit. 15.4.2019]",
+}
+
+
 @misc{mapko,
   title = "Mapování",
   url = "http://pepa.fsv.cvut.cz/~mapovani/web/index.html",
@@ -250,3 +258,49 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
   howpublished = "[online]",
   note = "[cit. 17.4.2019]",
 }
+
+@misc{cpo_legenda,
+  title = "Legend for Franciscan Cadastral Maps 1824",
+  url = "https://cs.wikipedia.org/wiki/Soubor:Legend_for_Franciscan_Cadastral_Maps_1824.jpg",
+  howpublished = "[online]",
+  note = "[cit. 22.4.2019]",
+  author = "Survey Office of the Austro-Hungarian Empire",
+}
+
+@misc{rabi_foto,
+  title = "Muškaření na Šumavě",
+  url = "https://www.muskareni-sumava.cz/pstruhovy-revir-otava-6/otava-jez-rabi-zichovice-2/",
+  howpublished = "[online]",
+  note = "[cit. 8.4.2019]",
+}
+
+@misc{pisek,
+  title = "Kamenný most v Písku",
+  url = "https://www.jiznicechy.cz/turisticke-cile/22-kamenny-most-v-pisku",
+  howpublished = "[online]",
+  note = "[cit. 8.4.2019]",
+}
+
+@misc{pisek2,
+  title = "Písek: Oficiální turistický portál města Písek",
+  url = "http://www.pisek.eu/",
+  howpublished = "[online]",
+  note = "[cit. 8.4.2019]",
+}
+
+@misc{smo5_bp,
+  title = "Bakalářská práce: Vývoj státní mapy 1:5000 - odvozené",
+  url = "https://theses.cz/id/ikbcqz/bc_-_SMO5.pdf",
+  howpublished = "[online]",
+  note = "[cit. 18.4.2019]",
+  author = "Tomáš Petr",
+}
+
+@misc{ortofoto,
+  title = "Ortofotomapa.cz",
+  url = "http://www.ortofotomapa.cz/",
+  howpublished = "[online]",
+  note = "[cit. 22.4.2019]",
+  author = "Hrdlička spol. s r. o.",
+}
+
