--- a/text/DP_pasovska.tex
+++ b/text/DP_pasovska.tex
@@ -35,18 +35,18 @@
 \department{Katedra geomatiky     }
 \acknowledgements{Studijní program Geodézie a kartografie}
 
-\title{Kartografická vizualizace vývoje území v údolí řeky Otavy v okolí Strakonic}
+\title{Kartografická vizualizace vývoje území v~údolí řeky Otavy v okolí Strakonic}
 \authorGN{Petra} %(křestní) jméno (jména) autora
 \authorFN{Pasovská} %příjmení autora
 \authorWithDegrees{Bc. Petra Pasovská} %jméno autora včetně současných akademických titulů
 \supervisor{Ing. Tomáš Janata, Ph.D.}
-\acknowledgements{Děkuji Ing. Tomáši Janatovi, Ph.D., za odborné vedení práce a cenné rady, které mi pomohly tuto práci zkompletovat. Velké díky také patří mé rodině a přátelům, kteří mi byli po dobu zpracování velkou oporou. Ráda bych také poděkovala panu Ladislavu Höllovi, který mi velmi pomohl se sběrem historických fotografií použitých v této práci a pracovníkům Stavebního úřadu ve Strakonicích za zapůjčení stavebních plánů Strakonického hradu.}
-\abstractCS{Cílem této práce je vizualizace údolí řeky Otavy ve vybraném zájmovém území. Podstatou práce je zpracování kartografických podkladů pro různé časové hladiny. Výsledné zpracování dat je doplněno o generalizovaný 3D model Strakonického hradu. Součástí práce je také sběr historických fotografií zachycujících řeku Otavu a jejich porovnání se současným stavem. Okolí řeky je následně doplněno o objekty vytvořené konceptuálním modelováním v programu CityEngine. Na základě zpracování kartografických podkladů je  možné porovnat změnu využití půdy a říčního koryta. (tady to ještě poupravit ten konec, nějak pěkně vymyslet účel práce) }
-\abstractEN{The aim of this work is visualize the Otava River valley in the selected area of interest. The essence of this thesis is the processing of cartographic materials for various time periods. The result is complemented by a generalized 3D model of Strakonice Castle. The thesis also includes the collection of historical photographs depicting the Otava River and their comparison with the current state. The surroundings of the river are then supplemented with objects created by conceptual modeling in the CityEngine program. }
+\acknowledgements{Děkuji Ing. Tomáši Janatovi, Ph.D., za odborné vedení práce a cenné rady, které mi pomohly tuto práci zkompletovat. Velké díky také patří mé rodině a přátelům, kteří mi byli po dobu zpracování velkou oporou. Ráda bych také poděkovala panu Ladislavu Höllovi, který mi velmi pomohl se sběrem historických fotografií použitých v této práci a pracovníkům Stavebního úřadu ve~Strakonicích za zapůjčení stavebních plánů Strakonického hradu.}
+\abstractCS{Cílem této práce je vizualizace údolí řeky Otavy ve vybraném zájmovém území. Podstatou práce je zpracování kartografických podkladů pro různé časové hladiny. Pro demonstraci jednotlivých časových hladin byly vytvořeny dílčí tematické mapy. Výsledné zpracování dat je doplněno o generalizovaný 3D model Strakonického hradu. Okolí hradu je následně doplněno o objekty vytvořené konceptuálním modelováním v programu CityEngine. Součástí práce je také sběr historických fotografií zachycujících řeku Otavu a jejich porovnání se současným stavem. Výsledky jsou prezentovány formou webových stránek. }
+\abstractEN{The aim of this work is visualize the Otava River valley in the selected area of~interest. The essence of this thesis is the processing of cartographic materials for various time periods. Sub-thematic maps were created to demonstrate the~individual time periods. The result is complemented by a generalized 3D~model of Strakonice Castle. The surrounding of the castle is supplemented with objects created by conceptual modeling in the CityEngine program. The~thesis also includes the collection of historical photographs depicting the~Otava River and their comparison with the current state. The~results are presented in~web pages.}
 \placeForDeclarationOfAuthenticity{V~Praze}
 \declarationOfAuthenticityOption{1} %volba Prohlášení (číslo 1-6)
-\keywordsCS{Otava, řeka, údolí, Strakonice, georeferencování, vektorizace, 3D model, ArcGIS, CityEngine, Sketchup \newpage}
-\keywordsEN{Otava, river, valley, Strakonice, georeferencing, vectorization, 3D model, ArcGIS, CityEngine, Sketchup}
+\keywordsCS{Otava, řeka, údolí, Strakonice, georeferencování, vektorizace, 3D~model, ArcGIS, CityEngine, Sketchup \newpage}
+\keywordsEN{Otava, river, valley, Strakonice, georeferencing, vectorization, 3D~model, ArcGIS, CityEngine, Sketchup}
 
 \begin{document}
 
@@ -54,19 +54,23 @@
 % \newacronym{FSv}{FSv}{Fakulta stavebn{\' i}}
 
 \begin{introduction}
-Voda, nejdůležitější složka na Zemi. Zaujímá klíčové postavení nejen v přírodě, ale i v činnosti člověka. Přesto, že má voda schopnost se neustále obnovovat, její zásoby každým rokem klesají. Voda je nepostradatelnou součástí našich životů. Je nepostradatelným zdrojem pitné vody, využívá se pro zavlažování či v energetice. 
+Voda, nejdůležitější složka na Zemi. Zaujímá klíčové postavení nejen v přírodě, ale i v činnosti člověka. Přesto, že má voda schopnost se neustále obnovovat, její zásoby každým rokem klesají. Voda je nezbytnou součástí našich životů. Je nepostradatelným zdrojem pitné vody, využívá se pro zavlažování či v energetice. 
 
-Pro zpracování bylo vybráno území v jižních Čechách poblíž města Strakonice, nazývané též střední Pootaví, kde díky velmi suchým létům začínají vysychat studny a některé domácnosti se díky tomu mohou ocitnout zcela bez vody. Kontrastem k těmto suchým obdobím jsou často zvýšené hladiny řeky Otavy, a to zejména na jaře při tání sněhové pokrývky na Šumavě a v srpnu, kdy je často velmi vydatný déšť, který nedokáže půda zcela pojmout.
+Klíčovým tématem této práce je voda. Přesněji řeka Otava. Pro zpracování bylo vybráno území v jižních Čechách poblíž města Strakonice, nazývané též střední Pootaví, kde díky velmi suchým létům začínají vysychat studny a~některé domácnosti se díky tomu mohou ocitnout zcela bez vody. Kontrastem k~těmto suchým obdobím mohou být zvýšené hladiny řeky Otavy, které měly v~minulosti silný negativní dopad na města, jimiž řeka protéká.
 
-V roce 2002 byla jedna z nejničivějších povodní na Otavě, která poškodila mnoho měst. Následkem toho vznikla nová protipovodňová opatření a města se začala připravovat na možnost, že by takto velká voda opět přišla. V této práci bude zkoumána změna toku a říčního koryta Otavy v různých časových hladinách. Na změnu říčního koryta má vliv i využití okolní půdy. Z tohoto důvodu byly vytvořeny hlavní kategorie využití půdy a následně vypočítán koeficient ekologické stability. 
+V roce 2002 byla jedna z nejničivějších povodní na Otavě, která poškodila mnoho významných památek a zničila mnoho obydlí. Následkem toho vznikla nová protipovodňová opatření a města se začala připravovat na možnost, že~by takto velká voda opět přišla. V této práci bude zkoumána změna toku a~říčního koryta Otavy v různých časových hladinách.
 
-Pro zhodnocení a vizualizaci údolí řeky Otavy bylo použito několik historických kartografických děl. Nejstarší podklady jsou Císařské povinné otisky stabilního katastru (1826-1843). (SEPSAT DALŠÍ KARTOGRAFICKÉ PODKLADY ZE KTERÝCH SE VYCHÁZELO). Neodmyslitelným symbolem řeky Otavy je Strakonický hrad, který vznikl na soutoku Otavy a Volyňky v 1. polovině 13. století. Z důvodu významnosti této stavby byl vytvořen generalizovaný 3D model hradu, který vizuálně doplní vytvořený model řeky. 
+Pro zhodnocení a vizualizaci údolí řeky Otavy byla použita historická kartografická díla. Nejstarší podklady jsou Císařské povinné otisky stabilního katastru (1826-1843). Dále byla pro vizualizaci použita Státní mapa odvozená v měřítku 1 : 5000 (50. léta). Neodmyslitelným symbolem řeky Otavy a středního Pootaví je Strakonický hrad, který vznikl na soutoku Otavy a~Volyňky v 1. polovině 13. století. Z důvodu významnosti této stavby byl vytvořen generalizovaný 3D model hradu, který vizuálně doplní vytvořený model řeky. V~programu City Engine bylo okolí hradu doplněno objekty vytvořenými konceputálním modelováním.
 
-V rámci diplomové práce byl proveden také sběr historických fotografií. Pro doplnění práce byly použity nejen historické fotografie zachycující řeku Otavu, ale také fotografie Strakonického hradu. 
+V rámci diplomové práce byl proveden také sběr historických fotografií. Pro doplnění práce byly použity nejen historické fotografie zachycující řeku Otavu, ale také fotografie Strakonického hradu a blízkého okolí hradu. 
 
-Diplomová práce je rozdělena na čtyři hlavní části. Začátek práce poskytuje seznámení s řekou Otavou z hydrologického, historického i kulturního hlediska. Ve druhé části jsou blíže popsána použitá data. Následně je konkrétně popsán způsob zpracování dat a metody, které byly v rámci diplomové práce použity. Závěr je věnován prezentování výsledků na webové stránce, která byla vytvořena v jazyce (NO PROSTĚ TADY SE ROZEPSAT AŽ SE ROZMYSLÍM JAK TU STRÁNKU NAPSAT)
+Při tvorbě práce byl kladen důraz na samostatnou investigaci materiálů. Za tímto účelem byly osobně obstarány stavební plány Strakonického hradu, historické fotografie ze soukromých sbírek a z archivů měst, jimiž řeka protéká. Při vyhledávání zdrojů a dokumentace byl uplatněn velký zájem o historii a o zpracovávanou oblast. 
 
-napsat něco o tom, že je práce v Latexu a že podporuju rozvoj v sázecím prostředí, že jsem si sama vyhledávala data atd
+Diplomová práce je rozdělena na čtyři hlavní části. Začátek práce poskytuje seznámení s řekou Otavou z hydrologického, historického i kulturního hlediska. Ve druhé části jsou blíže popsána použitá data. Následně je konkrétně popsán způsob zpracování dat a metody, které byly v rámci diplomové práce použity. Závěr je věnován prezentování výsledků na webové stránce, která obsahuje jak stručné informace o historii měst ležících na Otavě, tak vygenerovaný 3D model hradu, srovnávací fotografie či vytvořené dílčí tematické mapy.
+
+\
+
+Text práce byl vytvořen v systému \LaTeX, který uživatelům umožňuje sazbu kvalitních dokumentů.
 
 
 \end{introduction}
@@ -74,21 +78,25 @@ napsat něco o tom, že je práce v Latexu a že podporuju rozvoj v sázecím pr
 \chapter{Rešerše literatury}
 Tato práce se zaměřuje na tři hlavní témata - hydrologii, kartografii a modelování. Všechna témata jsou v dnešní době aktuální a existuje k nim mnoho publikací.
 
-Knih o hydrologii byla publikována celá řada. Vzhledem k tomu, že na mnoha vysokých školách je hydrologie vyučována, vycházela jsem v této práci především ze studijních materiálů, a to zejména ze studijních materiálů VŠCHT a Univerzity Karlovy. Pro výklad termínů vztahujícím se k řekám byl použit Meteorologický slovník \cite{meteo} vytvořený Českou meteorologickou společností (ČMeS), který je dostupný na internetu zdarma. Některé definice byly čerpány také z knihy Ladislava Slavíka a Martina Nerudy Voda v krajině \cite{definiceHydro}. 
 
-Pro zhodnocení řeky jako takové nejvíce posloužila kniha Základy fyzické geografie \cite{FGkniha}. Hydrologickou analýzou se ve velké míře zabývají na již zmíněné Univerzitě Karlově, kde byl vytvořen návod na cvičení od Miroslava Šobra \cite{UK}. Významnou publikací je také studijní materiál Hydrologie a hydropedologie od autorek Dany Pokorné a Jany Zábranské \cite{hydrovscht}. 
+Knih o hydrologii byla publikována celá řada. Vzhledem k tomu, že na~mnoha vysokých školách je hydrologie vyučována, vycházela jsem v této práci především ze studijních materiálů, a to zejména ze studijních materiálů VŠCHT a Univerzity Karlovy. Pro výklad termínů vztahujícím se k řekám byl použit \textit{Meteorologický slovník} \cite{meteo} vytvořený Českou meteorologickou společností (ČMeS), který je dostupný na internetu zdarma. Některé definice byly čerpány také z knihy Ladislava Slavíka a Martina Nerudy \textit{Voda v krajině} \cite{definiceHydro}. 
 
-Kartografií zabývající se publikace jsou opět převážně studijní materiály. Pro vizualizaci zájmové oblasti byly využity Císařské povinné otisky stabilního katastru. O vzniku a vlastnostech (detailech?) těchto map se lze dočíst v publikaci od Růženy Zimové a Bohuslava Veverky Topografická a tematická kartografie \cite{topo_skripta}. Tématu mapování se také věnuje profesor František Hromádka, který s kolektivem autorů publikoval učební text Mapování \cite{mapovani_brno}.
 
-Zmíněné historické podklady bylo nutné zgeoreferencovat. Popis transformací a zpracování historických děl je kvalitně obsaženo v díle Jiřího Cajthamla Analýza starých map v digitálním prostředí na příkladu Műllerových map Čech a Moravy\cite{transformace}. Autor se v tomto díle mimo transformace věnuje také popisu starých map našeho území a prezentaci vytvořených digitálních map.
+Pro zhodnocení řeky jako takové nejvíce posloužila kniha \textit{Základy fyzické geografie} \cite{FGkniha}. Hydrologickou analýzou se ve velké míře zabývají na již zmíněné Univerzitě Karlově, kde byl vytvořen návod na cvičení od Miroslava Šobra \cite{UK}. Významnou publikací je také studijní materiál \textit{Hydrologie a hydropedologie} od~autorek Dany Pokorné a Jany Zábranské \cite{hydrovscht}. 
 
-Pro vizualizaci okolí řeky Otavy byly vytvářeny dílčí tematické mapy. Při tvorbě map je nutné dodržet stanovená kartografická pravidla. V této práci byla hlavním literárním zdrojem těchto pravidel díla od Růženy Zimové a Bohuslava Veverky Topografická a tematická kartografie \cite{topo_skripta}, učební text od Jaroslava Hybáška Topografická a tematická kartografie - učební texty \cite{tematicka_brno}, publikace Vybrané okruhy geografické kartografie od Jana D. Bláhy \cite{kartoblaha} a kniha Metody tematické kartografie - Vizualizace prostorových jevů od Víta Voženílka \cite{mapyolomouc}.
+Kartografií zabývající se publikace jsou opět převážně studijní materiály. Pro vizualizaci zájmové oblasti byly využity Císařské povinné otisky stabilního katastru. O vzniku a vlastnostech těchto map se lze dočíst v publikaci od Růženy Zimové a Bohuslava Veverky \textit{Topografická a tematická kartografie} \cite{topo_skripta}. Tématu mapování se také věnuje profesor František Hromádka, který s~kolektivem autorů publikoval učební text \textit{Mapování} \cite{mapovani_brno}.
 
-V rámci práce byly zkoumány možnosti 3D modelování objektů. Tomuto tématu se věnují především práce publikované v zahraničí, nejčastěji odborné články. Za zmínku jistě stojí článek publikovaný v časopise Minjiangské univerzity v roce 2016 \cite{cina}. Autoři v tomto článku popisují využití 3D modelování v územním plánování vytvořené v prostředí GIS ve městě Fuzhou. Na téma 3D modelování v prostředí GIS vyšel také článek v časopise International Journal of Risk Assessment and Management \cite{clanek_flood}. Autoři v tomto článku analyzovali, vizualizovali a simulovali povodňová rizika poblíž řeky Qu'Appelle v jižním Saskatchewanu. 
+Zmíněné historické podklady bylo nutné zgeoreferencovat. Popis transformací a zpracování historických děl je kvalitně obsaženo v díle Jiřího Cajthamla \textit{Analýza starých map v digitálním prostředí na příkladu Műllerových map Čech a Moravy} \cite{transformace}. Autor se v tomto díle mimo transformace věnuje také popisu starých map našeho území a prezentaci vytvořených digitálních map.
 
-Na téma 3D modelování existuje mnoho zahraničních knih. Převážně se však týkají modelování z architektonického hlediska, zde jistě stojí za zmínku kniha Google SketchUp Workshop \cite{sketchup}, která podrobně popisuje tvorbu modelů v programu SketchUp. Modelování terénu se ve své publikaci Visualization of Digital Terrain and Landscape Data také věnuje Rűdiger Mach a Peter Petschek \cite{vizteren}. 
+Pro vizualizaci okolí řeky Otavy byly vytvářeny dílčí tematické mapy. Při~tvorbě map je nutné dodržet stanovená kartografická pravidla. V této práci byla hlavním literárním zdrojem těchto pravidel díla od Růženy Zimové a~Bohuslava Veverky \textit{Topografická a tematická kartografie} \cite{topo_skripta}, učební text od~Jaroslava Hybáška \textit{Topografická a tematická kartografie - učební texty} \cite{tematicka_brno}, publikace \textit{Vybrané okruhy geografické kartografie} od Jana D. Bláhy \cite{kartoblaha} a~kniha \textit{Metody tematické kartografie - Vizualizace prostorových jevů} od Víta Voženílka \cite{mapyolomouc}.
 
-Na téma modelování terénu v prostředí ArcGIS vypracovala diplomovou práci Adina Slívová \cite{adina}. Ta v rámci své práce vytvářela model historického údolí Vltavy v oblasti přehradní nádrže Slapy. 
+V rámci práce byly zkoumány možnosti 3D modelování objektů. Tomuto tématu se věnují především práce publikované v zahraničí, nejčastěji odborné články. Za zmínku jistě stojí článek \textit{Landscape-Scale Simulation Analysis of~Waterlogging and Sponge City Planning for a Central Urban Area in Fuzhou City} publikovaný v časopise Minjiangské univerzity v roce 2016 \cite{cina}. Autoři v tomto článku popisují využití 3D~modelování v územním plánování vytvořené v prostředí GIS ve městě Fuzhou. Na téma 3D modelování v prostředí GIS vyšel také článek \textit{A GIS-supported 3D approach for flood risk assessment of~the~Qu'Appelle River} v časopise International Journal of Risk Assessment and~Management \cite{clanek_flood}. Autoři v tomto článku analyzovali, vizualizovali a simulovali povodňová rizika poblíž řeky Qu'Appelle v jižním Saskatchewanu. 
+
+Na téma 3D modelování existuje mnoho zahraničních knih. Převážně se~však týkají modelování z architektonického hlediska, zde jistě stojí za zmínku kniha \textit{Google SketchUp Workshop} \cite{sketchup}, která podrobně popisuje tvorbu modelů v~programu SketchUp. Modelování terénu se ve své publikaci \textit{Visualization of~Digital Terrain and Landscape Data} také věnuje Rűdiger Mach a Peter Petschek \cite{vizteren}. 
+
+Na téma modelování terénu v prostředí ArcGIS vypracovala diplomovou práci Adina Slívová \cite{adina}. Ta v rámci své práce \textit{3D model historického údolí Vltavy v oblasti přehradní nádrže Slapy} vizualizovala přehradní nádrž Slapy formou 3D modelu. Tato práce byla součástí projektu \textit{Vltava – proměny historické krajiny v důsledku povodní, stavby přehrad a změn ve využití území s~vazbami na kulturní a společenské aktivity v okolí řeky}. Mezi studenty je~téma spojené s historií velmi oblíbené. Adéla Dykastová se ve své práci \textit{Analýza a~vizualizace vývoje zástavby města Kadaně} \cite{dykastova} věnuje zhodnocení a~vhodné vizualizaci vývoje zástavby Kadaně od roku 1842 až do současnosti. 
+
+Neopomenutelnou součástí práce je i střední Pootaví. Na toto téma vznikla řada publikací. O Otavě byla nejvíce nápomocna kniha \textit{Po vlnách řeky Otavy} \cite{SMOOS} od Eduarda Oberfalcera, který spolupracuje se Svazkem měst a obcí okresu Strakonic a mimo tuto publikaci vydal například i knihu \textit{Encyklopedie měst a obcí okresu Strakonice} \cite{obce}. Z knih týkajících se historie a pověstí jižních Čech je jedním z nejznámějších autorů Ondřej Fibich, který ač vyrostl a vystudoval gymnázium v Praze, tak má velmi blízko k Šumavě a jeho díla jsou úzce spjata s Prácheňskem, Píseckem a Šumavou.
 
 
 
@@ -197,7 +205,7 @@ V dnešní době se v Sušici nachází mnoho turisticky vyhledávaných míst. 
 \subsection{Žichovice}
 Na soutoku Nezdického potoka a Otavy se nachází malebná obec Žichovice. První písemnou zmínku lze nalézt z roku 1045, kdy Břetislav I. věnoval Žichovice břevnovskému klášteru. Ve 2. polovině 16. století koupil Žichovice Jan Kavka Říčanský z Říčan a nechal zde vybudovat renesanční tvrz. Tvrz byla kolem roku 1603 přestavěna Janem Libštejnským z Kolovrat na renesanční zámek. Od roku 1964 je zámek chráněn jako kulturní památka. \cite{zichovice}
 
-Žichovice se nachází zhruba 1 km jižně od zříceniny Rabí (obrázek č. \ref{obrazek:zichovice}, zdroj \cite{rabi_foto}) . Hrad byl založen rodem Wittelsbachů již v první polovině 13. století. S hradem se pojí mnoho pověstí, z nichž nejznámější je zřejmě pověst týkající se Jana Žižky, který zde údajně přišel o své druhé oko. Dohadů o ztrátě oka je však mnoho. Mezi~nejrozšířenější pověsti patří pověst o veliteli hradu Přibíku Kocovském, který z hradeb Rabí vystřelil šíp, kterým zasáhl právě oko Jana Žižky. Tento výjev byl poté zobrazen i na rabské bráně. Podle jiné pověsti se zabodl šíp do~hrušně, pod níž Žižka stál, a tříska ze stromu mu vypíchla oko. Po mnoho let se poté v oblasti Rabí chovala tradice vysazování hrušní. \cite{rabi}
+Žichovice se nachází zhruba 1 km jižně od zříceniny Rabí (obrázek č. \ref{obrazek:zichovice}, zdroj \cite{rabi_foto}) . Hrad byl založen rodem Wittelsbachů již v první polovině 13.~století. S hradem se pojí mnoho pověstí, z nichž nejznámější je zřejmě pověst týkající se Jana Žižky, který zde údajně přišel o své druhé oko. Dohadů o~ztrátě oka je však mnoho. Mezi~nejrozšířenější pověsti patří pověst o veliteli hradu Přibíku Kocovském, který z hradeb Rabí vystřelil šíp, kterým zasáhl právě oko Jana Žižky. Tento výjev byl poté zobrazen i na rabské bráně. Podle jiné pověsti se zabodl šíp do~hrušně, pod níž Žižka stál, a tříska ze stromu mu vypíchla oko. Po mnoho let se poté v oblasti Rabí chovala tradice vysazování hrušní. \cite{rabi}
 
 Pro obec Žichovice měla Otava velký historický význam. V okolí se nachází stará rýžoviště zlata, je zde dlouhá vápenkářská tradice a bohatá historie voroplavby.
 
@@ -236,15 +244,15 @@ V roce 1367 bylo městu Bavorem IV. uděleno právo várečné. Pivo si vařili 
 
 V roce 1357 postihl město velký požár, který zničil horní část města. Při~obnově bylo náměstí v této části rozšířeno, díky čemuž se protáhlo a mělo tvar dlouhého úzkého obdélníku. Obyvatele Strakonic dodnes tíží fakt, že místo náměstí mají spíše dlouhou ulici. Kromě požárů sužovaly město zejména povodně. Ty byly velmi časté a opakovaně zaplavovaly podhradí. Z toho důvodu neviděli Bavorové oblast Strakonicka za vhodnou pro založení města.
 
-Během husitských válek byly Strakonice na straně katolického panstva a šlechtických rodů. Pro husitská vojska byl hrad nedobytný. Dobylo jej až během třicetileté války v roce 1619 císařské vojsko pod vedením Karla Longuevala. Město bylo drancováním švédskými vojsky natolik zdevastováno, že jej v roce 1645 velkopřevor Rudolf Colloredo z Wallsee osvobodil od placení válečných daní.
+Během husitských válek byly Strakonice na straně katolického panstva a šlechtických rodů. Pro husitská vojska byl hrad nedobytný. Dobylo jej až~během třicetileté války v roce 1619 císařské vojsko pod vedením Karla Longuevala. Město bylo drancováním švédskými vojsky natolik zdevastováno, že~jej v roce 1645 velkopřevor Rudolf Colloredo z Wallsee osvobodil od placení válečných daní.
 
-Po první světové válce byl hrad prodán agrárnímu sdružení a začal se ve~městě rozvíjet průmysl. Vznikla Jihočeská zbrojovka a ve velkém se ve~Strakonicích vyráběly turecké čepičky (fezy), které byly následně nahrazeny barety. 
+Po první světové válce byl hrad prodán agrárnímu sdružení a začal se~ve~městě rozvíjet průmysl. Vznikla Jihočeská zbrojovka a ve velkém se ve~Strakonicích vyráběly turecké čepičky (fezy), které byly následně nahrazeny barety. 
 
 Ze Strakonic pochází mnoho významných osobností, za zmínku určitě stojí František Ladislav Čelakovský, Josef Šmidinger, do Strakonic také zasadil svou báchorku o Strakonickém dudáku Josef Kajetán Tyl. Ve Strakonicích prožil své dětství Jiří Žáček a Josef Skupa a jednou z nejdůležitějších osobností byl Josef Režný, který založil Prácheňský soubor lidových písní a tanců (Prácheňáček) a byl spoluzakladatelem Jihočeské slavnosti písní a tanců, dnes nazvané Mezinárodní dudácký festival ve Strakonicích. \cite{obce}
 
 
 \subsection{Písek}
-Vznik Písku se datuje zhruba do poloviny 13. století. Město vzniklo v oblasti rýžoviště zlatého písku, z čehož lze usuzovat i původ jména města. V roce 1254 jej rozšířil Přemysl Otakar II. na královské město. Během 13. století vzniklo v Písku mnoho významných staveb: hrad, klášter, děkanský kostel, rychta a kamenný most (obrázek č. \ref{obrazek:pisek}, zdroj: \cite{pisek}), který je v současné době nejstarším kamenným mostem v~České republice. 
+Vznik Písku se datuje zhruba do poloviny 13. století. Město vzniklo v oblasti rýžoviště zlatého písku, z čehož lze usuzovat i původ jména města. V roce 1254 jej rozšířil Přemysl Otakar II. na královské město. Během 13. století vzniklo v Písku mnoho významných staveb: hrad, klášter, děkanský kostel, rychta a~kamenný most (obrázek č. \ref{obrazek:pisek}, zdroj: \cite{pisek}), který je v současné době nejstarším kamenným mostem v~České republice. 
 
 \begin{figure}[h!]
 	\centering
