--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -145,8 +145,18 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
   howpublished = "[online]",
   title = "3D model historického údolí Vltavy v oblasti přehradní nádrže Slapy",
   note = "[cit. 11.3.2019]",
+  author = "Adina Slívová",
+  address = "Praha",
 }
 
+@misc{dykastova,
+  url = "https://dspace.cvut.cz/handle/10467/67900",
+  howpublished = "[online]",
+  title = "Analýza a vizualizace vývoje zástavby města Kadaně",
+  note = "[cit. 25.3.2019]",
+  author = "Adéla Dykastová",
+  address = "Praha",
+}
 
 @misc{zichovice,
   url = "http://www.zichovice.cz/historie-obce/",
